# utilities

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Doxyfile  Options_8cpp.html  Options_8cpp.js  Options_8cpp__incl.map  Options_8cpp__incl.md5  Options_8h.html  Options_8h.js  Options_8h__dep__incl.map  Options_8h__dep__incl.md5  Options_8h__incl.map  Options_8h__incl.md5  Options_8h_source.html  README.md  README_8md.html  annotated.html  annotated_dup.js  bytestreamC_8cpp.html  bytestreamC_8cpp.js  bytestreamC_8cpp__incl.map  bytestreamC_8cpp__incl.md5  bytestreamC_8h.html  bytestreamC_8h.js  bytestreamC_8h__dep__incl.map  bytestreamC_8h__dep__incl.md5  bytestreamC_8h__incl.map  bytestreamC_8h__incl.md5  bytestreamC_8h_source.html  cblas_8h.html  cblas_8h.js  cblas_8h__incl.map  cblas_8h__incl.md5  cblas_8h_source.html  classbytestream-members.html  classbytestream.html  classbytestream.js  classes.html  (+175 more)
.github/workflows/: build-and-test.yml  docker-publish.yml  doxygen-gh-pages.yml  pages.yml
DoxygenTagFiles/: utilities.tag
dependencies/: CMakeLists.txt
docker/: Dockerfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  (+30 more)
src/: CMakeLists.txt
src/molpro/: CMakeLists.txt  Options.cpp  Options.h  bytestreamC.cpp  bytestreamC.h  cblas.h  cblas_generic.h  iostream.h  lapacke.h  memory-config.h.in  memory.h  memoryC.cpp  mpi.cpp  mpi.h
test/: CMakeLists.txt  test-blas.cpp  test-eigen.cpp  test-iostream.cpp  test-lapacke.cpp  test-memory.cpp  test-mpi.cpp  test-options.cpp  xout.cpp
